--- a/Views/ContactExams/Index.cshtml
+++ b/Views/ContactExams/Index.cshtml
@@ -13,8 +13,9 @@
 <h2>Contacts List</h2>
 <div class="col-lg-12 col-md-12" style="margin-bottom:50px;">
     <div class="row">
-        @using (Html.BeginForm("Index", "Contacts", FormMethod.Get, new { @class = "d-none d-sm-inline-block form-inline mr-auto ml-md-6 my-2 my-md-0 mw-100 navbar-search col-lg-4 col-md-4" }))
+        @using (Html.BeginForm("Index", "ContactExams", FormMethod.Get, new { @class = "d-none d-sm-inline-block form-inline mr-auto ml-md-6 my-2 my-md-0 mw-100 navbar-search col-lg-4 col-md-4" }))
         {
+
 
             <div class="input-group">
                 @Html.TextBox("Search", ViewBag.CurrentFilter as string, new { @class = "form-control bg-light border-1 small" })
@@ -23,6 +24,7 @@
                         <i class="fas fa-search fa-sm"></i>
                     </button>
                 </div>
+
             </div>
 
 
